# ATLAS-06-Synthesizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  synthFramework.jucer
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Libraries/VST_SDK/: copy_vst2_to_vst3_sdk.bat  copy_vst2_to_vst3_sdk.sh
Libraries/VST_SDK/VST3_SDK/cmake/modules/: AAXSupport.cmake  AddSubDirectories.cmake  AddVST3Library.cmake  AddVST3Options.cmake  CoreAudioSupport.cmake  FindJack.cmake  Global.cmake  PlatformIOS.cmake  PlatformToolset.cmake  SetupVST3LibraryDefaultPath.cmake  UniversalBinary.cmake  VstGuiSupport.cmake
Libraries/VST_SDK/VST3_SDK/doc/: footer.html  sdk.firstpage.html  sdk.menu.html  sdk.overview.html
Libraries/VST_SDK/VST3_SDK/doc/artwork/: VST_Compatible_Logo_Steinberg.icns
Libraries/VST_SDK/VST3_SDK/doc/base/: annotated.html  base.tag  classSteinberg_1_1ConstStringTable-members.html  classSteinberg_1_1ConstStringTable.html  classSteinberg_1_1ConstStringTable.js  classSteinberg_1_1FUID-members.html  classSteinberg_1_1FUID.html  classSteinberg_1_1FUID.js  classSteinberg_1_1FUnknown-members.html  classSteinberg_1_1FUnknown.html  classSteinberg_1_1FUnknownPtr-members.html  classSteinberg_1_1FUnknownPtr.html  classSteinberg_1_1FUnknown__inherit__graph.map  classSteinberg_1_1FUnknown__inherit__graph.md5  classSteinberg_1_1FVariant-members.html  classSteinberg_1_1FVariant.html  classSteinberg_1_1FVariant.js  classSteinberg_1_1IAttributes-members.html  classSteinberg_1_1IAttributes.html  classSteinberg_1_1IAttributes2-members.html  classSteinberg_1_1IAttributes2.html  classSteinberg_1_1IBStream-members.html  classSteinberg_1_1IBStream.html  classSteinberg_1_1IBStream.js  classSteinberg_1_1ICloneable-members.html  classSteinberg_1_1ICloneable.html  classSteinberg_1_1IDependent-members.html  classSteinberg_1_1IDependent.html  classSteinberg_1_1IErrorContext-members.html  classSteinberg_1_1IErrorContext.html  classSteinberg_1_1IPersistent-members.html  classSteinberg_1_1IPersistent.html  classSteinberg_1_1IPlugFrame-members.html  classSteinberg_1_1IPlugFrame.html  classSteinberg_1_1IPlugView-members.html  classSteinberg_1_1IPlugView.html  classSteinberg_1_1IPlugViewContentScaleSupport-members.html  classSteinberg_1_1IPlugViewContentScaleSupport.html  classSteinberg_1_1IPlugViewContentScaleSupport__inherit__graph.map  classSteinberg_1_1IPlugViewContentScaleSupport__inherit__graph.md5  (+188 more)
Libraries/VST_SDK/VST3_SDK/doc/basemodule/: annotated.html  annotated.js  base_module.tag  baseiids_8cpp.html  classSteinberg_1_1Buffer-members.html  classSteinberg_1_1Buffer.html  classSteinberg_1_1Buffer.js  classSteinberg_1_1CommandLine_1_1Description-members.html  classSteinberg_1_1CommandLine_1_1Description.html  classSteinberg_1_1CommandLine_1_1Descriptions-members.html  classSteinberg_1_1CommandLine_1_1Descriptions.html  classSteinberg_1_1CommandLine_1_1Descriptions.js  classSteinberg_1_1CommandLine_1_1VariablesMap-members.html  classSteinberg_1_1CommandLine_1_1VariablesMap.html  classSteinberg_1_1CommandLine_1_1VariablesMap.js  classSteinberg_1_1ConstString-members.html  classSteinberg_1_1ConstString.html  classSteinberg_1_1ConstString.js  classSteinberg_1_1DisableDispatchingTimers-members.html  classSteinberg_1_1DisableDispatchingTimers.html  classSteinberg_1_1FDynLibrary-members.html  classSteinberg_1_1FDynLibrary.html  classSteinberg_1_1FDynLibrary.js  classSteinberg_1_1FMallocReleaser-members.html  classSteinberg_1_1FMallocReleaser.html  classSteinberg_1_1FObject-members.html  classSteinberg_1_1FObject.html  classSteinberg_1_1FObject.js  classSteinberg_1_1FObject__inherit__graph.map  classSteinberg_1_1FObject__inherit__graph.md5  classSteinberg_1_1FStreamSizeHolder-members.html  classSteinberg_1_1FStreamSizeHolder.html  classSteinberg_1_1FStreamer-members.html  classSteinberg_1_1FStreamer.html  classSteinberg_1_1FStreamer.js  classSteinberg_1_1IBStreamer-members.html  classSteinberg_1_1IBStreamer.html  classSteinberg_1_1ITimerCallback-members.html  classSteinberg_1_1ITimerCallback.html  classSteinberg_1_1IUpdateManager-members.html  (+141 more)
Libraries/VST_SDK/VST3_SDK/doc/vstexamples/: VSTInterAppAudioAppDelegate_8h.html  VSTInterAppAudioAppDelegate_8mm.html  VSTInterAppAudioHostUIControllerViewController_8h.html  VSTInterAppAudioHostUIControllerViewController_8mm.html  adelay_2source_2factory_8cpp.html  adelay_2source_2factory_8cpp.js  adelay_2source_2version_8h.html  adelay_2source_2version_8h.js  adelaycontroller_8cpp.html  adelaycontroller_8h.html  adelayids_8h.html  adelayids_8h.js  adelayprocessor_8cpp.html  adelayprocessor_8h.html  again_2source_2version_8h.html  again_2source_2version_8h.js  again_8cpp.html  again_8h.html  againcids_8h.html  againcontroller_8cpp.html  againcontroller_8h.html  againentry_8cpp.html  againentry_8cpp.js  againentry__vst2_8cpp.html  againparamids_8h.html  againprocess_8h.html  againsidechain_8cpp.html  againsidechain_8h.html  againuimessagecontroller_8h.html  annotated.html  annotated.js  audiohost_2source_2usediids_8cpp.html  (+1030 more)
Libraries/VST_SDK/my_plugins/: CMakeLists.txt
Libraries/VST_SDK/my_plugins/helloworld/: CMakeLists.txt
Libraries/VST_SDK/my_plugins/helloworld_with_VSTGUI/: CMakeLists.txt
Libraries/VST_SDK/my_plugins/helloworld_with_VSTGUI/include/: plugcontroller.h  plugids.h  plugprocessor.h  version.h
Libraries/VST_SDK/my_plugins/helloworld_with_VSTGUI/resource/: plug.rc
Libraries/VST_SDK/my_plugins/helloworld_with_VSTGUI/source/: plugcontroller.cpp
Source/: Chorus.cpp  Chorus.h  ChorusEffect.cpp  ChorusEffect.h  Constants.h  Cutoff.cpp  Cutoff.h  Envelope.cpp  Envelope.h  FilterEnvelope.cpp  FilterEnvelope.h  HPF.cpp  HPF.h  LFO.cpp  LFO.h  LFOPWM.cpp  LFOPWM.h  LFOPitch.cpp  LFOPitch.h  LfoFilterEnvelope.cpp  LfoFilterEnvelope.h  Noise.cpp  Noise.h  Oscillator.cpp  Oscillator.h  PWM.cpp  PWM.h  PWMModeSwitch.cpp  PWMModeSwitch.h  PitchBend.cpp  PitchBend.h  PitchRange.cpp  PitchRange.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PolaritySwitch.cpp  PolaritySwitch.h  PresetLoader.cpp  (+15 more)
(+2277 files in other folders)
